--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -100,7 +103,11 @@
         <div class="row couple">
           <div class="col-lg-6">
             <div class="row">
-              <div class="col-8 text-end mb-5">
+              <div
+                class="col-8 text-end mb-5"
+                data-aos="fade-left"
+                data-aos-duration="1500"
+              >
                 <h3>Sandhika Galih</h3>
                 <p>
                   Putra dari Bapak Lorem <br />
@@ -115,11 +122,11 @@
                   ><i class="bi bi-instagram"></i> @iammayoni</a
                 >
               </div>
-              <div class="col-4">
+              <div class="col-4" data-aos="fade-left" data-aos-duration="1000">
                 <img
                   src="img/sandhika.png"
                   alt="Sandhika Galih"
-                  class="img-responsive"
+                  class="img-responsive cowo"
                 />
               </div>
             </div>
@@ -129,10 +136,14 @@
 
           <div class="col-lg-6">
             <div class="row">
-              <div class="col-4">
-                <img src="img/nofa.png" alt="Nofariza" class="img-responsive" />
+              <div class="col-4" data-aos="fade-right" data-aos-duration="1000">
+                <img
+                  src="img/nofa.png"
+                  alt="Nofariza"
+                  class="img-responsive cewe"
+                />
               </div>
-              <div class="col-8">
+              <div class="col-8" data-aos="fade-right" data-aos-duration="1500">
                 <h3>Nofariza</h3>
                 <p>
                   Putri dari Bapak Ipsum <br />
@@ -171,6 +182,8 @@
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
+              data-aos="zoom-in"
+              data-aos-duration="1000"
             ></iframe>
 
             <a
@@ -183,7 +196,11 @@
         </div>
 
         <div class="row justify-content-center mt-4">
-          <div class="col-md-5 col-10">
+          <div
+            class="col-md-5 col-10"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <div class="card text-center text-bg-light mb-5">
               <div class="card-header">Akad Nikah</div>
               <div class="card-body">
@@ -204,7 +221,11 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 col-10">
+          <div
+            class="col-md-5 col-10"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <div class="card text-center text-bg-light">
               <div class="card-header">Resepsi</div>
               <div class="card-body">
@@ -244,10 +265,10 @@
         <div class="row">
           <div class="col">
             <ul class="timeline">
-              <li>
+              <li data-aos="fade-right" data-aos-duration="1000">
                 <div
                   class="timeline-image"
-                  style="background-image: url(img/sman23.jpg)"
+                  style="background-image: url(img/love.png)"
                 ></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -262,10 +283,10 @@
                   </div>
                 </div>
               </li>
-              <li class="timeline-inverted">
+              <li data-aos="fade-right" data-aos-duration="1000">
                 <div
                   class="timeline-image"
-                  style="background-image: url(https://picsum.photos/300/300)"
+                  style="background-image: url(img/love.png)"
                 ></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -281,10 +302,10 @@
                   </div>
                 </div>
               </li>
-              <li>
+              <li data-aos="fade-right" data-aos-duration="1000">
                 <div
                   class="timeline-image"
-                  style="background-image: url(https://picsum.photos/300/300)"
+                  style="background-image: url(img/love.png)"
                 ></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -327,10 +348,14 @@
                 href="img/gallery/1.png"
                 data-toggle="lightbox"
                 data-gallery="mygallery"
+                data-aos="zoom-in"
+                data-aos-duration="1000"
               >
                 <img
                   src="img/gallery/thumbnail/1.png"
                   class="img-fluid w-100 rounded"
+                  data-aos="zoom-in"
+                  data-aos-duration="1000"
                 />
               </a>
             </div>
@@ -340,10 +365,14 @@
               href="https://picsum.photos/id/300/1200/768"
               data-toggle="lightbox"
               data-gallery="mygallery"
+              data-aos="zoom-in"
+              data-aos-duration="1000"
             >
               <img
                 src="https://picsum.photos/id/300/300/400"
                 class="img-fluid w-100 rounded"
+                data-aos="zoom-in"
+                data-aos-duration="1000"
               />
             </a>
           </div>
@@ -352,10 +381,14 @@
               href="https://picsum.photos/id/301/1200/768"
               data-toggle="lightbox"
               data-gallery="mygallery"
+              data-aos="zoom-in"
+              data-aos-duration="1000"
             >
               <img
                 src="https://picsum.photos/id/301/300/400"
                 class="img-fluid w-100 rounded"
+                data-aos="zoom-in"
+                data-aos-duration="1000"
               />
             </a>
           </div>
@@ -364,10 +397,14 @@
               href="https://picsum.photos/id/302/1200/768"
               data-toggle="lightbox"
               data-gallery="mygallery"
+              data-aos="zoom-in"
+              data-aos-duration="1000"
             >
               <img
                 src="https://picsum.photos/id/302/300/400"
                 class="img-fluid w-100 rounded"
+                data-aos="zoom-in"
+                data-aos-duration="1000"
               />
             </a>
           </div>
@@ -376,10 +413,14 @@
               href="https://picsum.photos/id/304/1200/768"
               data-toggle="lightbox"
               data-gallery="mygallery"
+              data-aos="zoom-in"
+              data-aos-duration="1000"
             >
               <img
                 src="https://picsum.photos/id/304/300/400"
                 class="img-fluid w-100 rounded"
+                data-aos="zoom-in"
+                data-aos-duration="1000"
               />
             </a>
           </div>
@@ -388,10 +429,14 @@
               href="https://picsum.photos/id/305/1200/768"
               data-caption="Sandhika & Nofa 6"
               data-gallery="mygallery"
+              data-aos="zoom-in"
+              data-aos-duration="1000"
             >
               <img
                 src="https://picsum.photos/id/305/300/400"
                 class="img-fluid w-100 rounded"
+                data-aos="zoom-in"
+                data-aos-duration="1000"
               />
             </a>
           </div>
@@ -704,6 +749,13 @@
       //   disableScroll();
       // }
       disableScroll();
+    </script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
     </script>
 
     <script>
