--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
 
+    <!-- Icon Title -->
+    <link rel="icon" href="img/icon.ico" type="image/x-icon" />
+
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
@@ -189,7 +192,7 @@
             <a
               href="https://goo.gl/maps/R9seweCadg9MNyox5"
               target="_blank"
-              class="btn btn-light btn-sm my-3"
+              class="maps btn btn-light btn-sm my-3"
               >Klik untuk membuka peta</a
             >
           </div>
@@ -198,7 +201,7 @@
         <div class="row justify-content-center mt-4">
           <div
             class="col-md-5 col-10"
-            data-aos="fade-left"
+            data-aos="zoom-in"
             data-aos-duration="1000"
           >
             <div class="card text-center text-bg-light mb-5">
@@ -223,7 +226,7 @@
           </div>
           <div
             class="col-md-5 col-10"
-            data-aos="fade-right"
+            data-aos="zoom-in"
             data-aos-duration="1000"
           >
             <div class="card text-center text-bg-light">
